# milx

./: .gitignore  .htaccess  CMakeLists.txt  CPackConfig.cmake  CPackDefinitions.cmake  DefineInstallationPaths.cmake  FindLibMicroHTTPD.cmake  INSTALL  Makefile.in  MilxDefinitions.cmake  README  TODO  application.cpp  application.h  build.sh  configure  configure.ac  controller.h  dep_size.sh  dispatch.cpp  doxyconfig  index.cgi  index.cpp  merd.cpp  milx_uml.jude  mime.types  response.cpp  response.h  tasks.sh
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
include/milx/: action_callback.h  application.h  callback.h  controller.h  http.h  logger.h  milx.h  module.h  path.h  plugin_manager.h  plugins.h  routing.h  views.h
include/milx/http/: call.h  method.h
include/milx/server/: daemon.h
plugins/xml_view/: xml_renderer.cc  xml_renderer.h  xml_serialization.h  xslt_renderer.cc  xslt_renderer.h
skeleton/: CMakeLists.txt  boot.cc  classes.milx.h  routes.milx.cc
skeleton/src/: controller.cc  controller.h
src/: CMakeLists.txt  Makefile.am  Makefile.in  action_callback.h  action_callback.hpp  application.cc  application.cpp  application.h  application.hpp  callback.h  cgi_handler.cpp  cgi_handler.h  cgi_request.h  controller.cc  controller.cpp  controller.h  controller.hpp  cookie.cpp  cookie.h  cookie.hpp  debug.h  file_response.cpp  file_response.hpp  listdir.cpp  logger.cc  logger.cpp  logger.h  logger.hpp  manipulators.hpp  milx-cgi.cpp  milx.cc  milx.cpp  milx.h  module.cc  module.cpp  module.h  module.hpp  path.cc  path.cpp  path.hpp  (+29 more)
src/cgi/: CMakeLists.txt  cgi_handler.cpp  cgi_handler.h  cgi_request.cpp  cgi_request.h  cgi_request.hpp  milx-cgi.cpp
src/cli/: CMakeLists.txt  command.cc  command.cpp  command.h  command.hpp  create_command.cc  create_command.cpp  create_command.h  create_command.hpp  main.cc  main.cpp  server_command.cc  server_command.cpp  server_command.h  server_command.hpp
src/http/: call.cc  call.h
src/lib/: CMakeLists.txt  application.cc  callback.cc  controller.cc  logger.cc  milx.cc  plugin_manager.cc  routing.cc  views.cc
src/lib/http/: call.cc
src/lib/server/: daemon.cc
src/manipulators/: base.cpp  base.cpp~  base.hpp  base.hpp~  module_manipulator.cpp  module_manipulator.hpp  module_manipulator.hpp~  project_manipulator.cpp  project_manipulator.hpp  project_manipulator.hpp~
src/plugins/: CMakeLists.txt
src/plugins/xml_view/: CMakeLists.txt  loader.cc  xml_renderer.cc  xml_renderer.h  xml_serialization.cc  xslt_renderer.cc  xslt_renderer.h
src/server/: daemon.cc  daemon.cpp  daemon.h  daemon.hpp  milx-server-main.cpp
src/view/: base.hpp  base.hpp~  context.hpp  plain.cpp  plain.cpp~  plain.hpp  plain.hpp~  plain_renderer.cc  plain_renderer.h  renderer.cc  renderer.cpp  renderer.h  renderer.hpp  xslt_renderer.cc  xslt_renderer.h
src/view/renderer/: base.hpp  plain.cpp  plain.hpp
test/: .gitignore  .htaccess  blog.cpp  blog.h  routes.cpp
test/src/: blog.cpp  blog.h  routes.cpp
